# drift-monitoring-training

./: .gitignore  1_premiers_pas.py  2_regression_monitoring.py  3_classification_monitoring.py  4_test_suites.py  4a_test_suites.py  Data drift report.html  Drift_Report.html  README.md  README_addons.md  build_reports.py  data_drift_report.json  data_drift_suite.html  data_report.html  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ui_demo_all.sh  ui_workspace.sh
artifacts/test_suites2/: custom_metrics.html  drift_arrdep_demo.html  no_target_perf_demo_batch000_0-10000.html  no_target_perf_demo_batch001_10000-20000.html  no_target_perf_demo_batch002_20000-25000.html
reports/exam_drift_monitoring/: 01_validation.html  02_model_drift_january.html  03_model_drift_feb_week1.html  03_model_drift_feb_week2.html  03_model_drift_feb_week3.html  04a_feb_weeks_audit.json  04b_target_drift_feb_week3.html  05_data_drift_feb_week3_numeric.html
src/: debug_drift.py  dummy_metrics_calculation.py  evidently_metrics_calculation.py  main.py  step1_download_data.py  step2_load_and_process_data.py  step3_train_and_evaluate_model.py  step4_save_model_and_data.py  step5_generate_report.py
